--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ step1:
     - echo "hi"
     - env
 
-  rules:
-   - changes:
+  only:
+    changes:
       - "folder/f1"
  
 
@@ -13,7 +13,7 @@ step2:
   script: 
     - echo "hi"
     - env
-  rules:
-   - changes:
+  only:
+   changes:
       - "folder/f2"
 
