--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,12 @@
-workflow:
-  rules:
-    # make sure there are changes in this pipeline
-    - if: $CI_COMMIT_BEFORE_SHA == '0000000000000000000000000000000000000000' || $CI_COMMIT_BEFORE_SHA == $CI_COMMIT_SHA
+workflow: 
+ rules: 
+    - if: $CI_COMMIT_TAG
       when: never
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
+    - if: $CI_COMMIT_BEFORE_SHA == '0000000000000000000000000000000000000000
+      when: never
+    - when: always
 
 
 step1:
@@ -10,9 +14,11 @@ step1:
     - echo "hi"
     - env
 
-  only:
-    changes:
-      - "folder/f1"
+  rules:
+    - changes:
+        - "folder/f1"
+      when: manual
+      allow_failure: true
  
 
 
@@ -20,7 +26,9 @@ step2:
   script: 
     - echo "hi"
     - env
-  only:
-   changes:
-      - "folder/f2"
+  rules:
+    - changes:
+        - "folder/f1"
+      when: manual
+      allow_failure: true
 
