--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 workflow:
-   rules:
-    - if: $CI_COMMIT_BEFORE_SHA == '0000000000000000000000000000000000000000'
-      when: never
-
-
+  rules:
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH && $CI_COMMIT_BEFORE_SHA != '0000000000000000000000000000000000000000
+ 
 
 
 step1:
