--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 workflow:
   rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH && $CI_COMMIT_BEFORE_SHA != '0000000000000000000000000000000000000000
- 
+    - if: $CI_COMMIT_BRANCH && $CI_COMMIT_BEFORE_SHA != '0000000000000000000000000000000000000000'
+
+
+
 
 
 step1:
@@ -15,10 +16,7 @@ step1:
       when: manual
       allow_failure: true
       
- Job1: 
-  script: 
-   - echo "hi"
-   - env
- 
 
-
+job2: 
+ script: 
+  - echo "hi"
